[gd_scene load_steps=14 format=4 uid="uid://dd7qxxk1bude6"]

[ext_resource type="Texture2D" uid="uid://te8ory7fxpu1" path="res://Artwork/NAVE/AssetsNave.png" id="1_5ny2v"]
[ext_resource type="Script" uid="uid://cx6ynif3bynax" path="res://Scripts/Level/nave_gato.gd" id="1_wyha3"]
[ext_resource type="PackedScene" uid="uid://of11km568ifc" path="res://Scenes/player.tscn" id="2_c1ttj"]
[ext_resource type="Texture2D" uid="uid://cm8nh2pfwaxmt" path="res://Artwork/NAVE/FUNDO.png" id="2_wyha3"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_wyha3"]
texture = ExtResource("1_5ny2v")
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:0/0 = 0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:0/0 = 0
3:0/0 = 0
3:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:1/0 = 0
2:1/0 = 0
1:1/0 = 0
0:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
2:3/0 = 0
1:3/0 = 0
0:3/0 = 0
3:4/0 = 0
2:4/0 = 0
1:5/0 = 0
0:5/0 = 0
2:5/0 = 0
3:5/0 = 0
1:4/0 = 0
0:4/0 = 0
3:6/0 = 0
3:7/0 = 0
2:7/0 = 0
1:7/0 = 0
0:7/0 = 0
2:6/0 = 0
1:6/0 = 0
0:6/0 = 0
2:8/0 = 0
1:8/0 = 0
0:8/0 = 0
3:8/0 = 0
2:11/0 = 0
2:10/0 = 0
2:9/0 = 0
1:9/0 = 0
0:9/0 = 0
0:10/0 = 0
0:11/0 = 0
1:11/0 = 0
1:10/0 = 0
3:10/0 = 0
3:10/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:9/0 = 0
3:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:12/0 = 0
1:12/0 = 0
3:12/0 = 0
2:12/0 = 0
3:11/0 = 0
0:13/0 = 0
1:13/0 = 0
2:13/0 = 0
3:13/0 = 0
3:14/0 = 0
2:14/0 = 0
0:14/0 = 0
0:14/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:15/0 = 0
0:15/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:16/0 = 0
0:16/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:17/0 = 0
1:17/0 = 0
2:17/0 = 0
3:17/0 = 0
3:18/0 = 0
2:18/0 = 0
1:18/0 = 0
0:18/0 = 0
0:19/0 = 0
0:20/0 = 0
1:19/0 = 0
2:19/0 = 0
3:19/0 = 0
3:20/0 = 0
2:20/0 = 0
1:20/0 = 0
1:21/0 = 0
0:21/0 = 0
0:22/0 = 0
1:22/0 = 0
2:22/0 = 0
3:22/0 = 0
3:23/0 = 0
3:24/0 = 0
2:24/0 = 0
1:24/0 = 0
0:23/0 = 0
2:21/0 = 0
3:21/0 = 0
0:24/0 = 0
1:23/0 = 0
2:23/0 = 0
1:14/0 = 0
1:16/0 = 0
1:15/0 = 0
2:16/0 = 0
2:15/0 = 0
3:15/0 = 0
3:16/0 = 0
3:3/0 = 0
0:25/0 = 0
1:25/0 = 0
2:25/0 = 0
3:25/0 = 0
0:26/0 = 0
1:26/0 = 0
2:26/0 = 0
3:26/0 = 0
0:27/0 = 0
1:27/0 = 0
2:27/0 = 0
3:27/0 = 0

[sub_resource type="TileSet" id="TileSet_x836q"]
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_wyha3")

[sub_resource type="Gradient" id="Gradient_c1ttj"]
offsets = PackedFloat32Array(0, 0.727273, 0.766234)
colors = PackedColorArray(0, 0.596375, 0.221708, 1, 0, 0.0677862, 0.0259488, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_wyha3"]
gradient = SubResource("Gradient_c1ttj")
fill = 1
fill_from = Vector2(0.5, 0.5)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_x836q"]
gradient = SubResource("Gradient_c1ttj")
fill = 1
fill_from = Vector2(0.5, 0.5)

[sub_resource type="Gradient" id="Gradient_etmr1"]
offsets = PackedFloat32Array(0, 0.727273, 0.766234)
colors = PackedColorArray(0, 0.767722, 0.294497, 1, 0, 0.0677862, 0.0259488, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_k5gl5"]
gradient = SubResource("Gradient_etmr1")
fill = 1
fill_from = Vector2(0.5, 0.5)

[sub_resource type="Gradient" id="Gradient_wyha3"]
offsets = PackedFloat32Array(0, 0.727273, 0.766234)
colors = PackedColorArray(0, 0.768627, 1, 1, 0, 0.0677862, 0.0259488, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_etmr1"]
gradient = SubResource("Gradient_wyha3")
fill = 1
fill_from = Vector2(0.5, 0.5)

[node name="NaveGato" type="Node2D"]
script = ExtResource("1_wyha3")

[node name="Background" type="TileMapLayer" parent="."]
tile_set = SubResource("TileSet_x836q")

[node name="Fundo" type="Sprite2D" parent="Background"]
position = Vector2(160, 88)
texture = ExtResource("2_wyha3")

[node name="Foreground" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAADAAEAAAABAA4AAAAPAAEAAAABAA4AAAAIAAkAAAADAAgAAAAJAAkAAAAAAAQAAAAKAAkAAAABAAQAAAALAAkAAAAAAAEAAAAMAAkAAAABAAEAAAANAAkAAAABABAAAAAOAAkAAAACAAIAAAAPAAkAAAADAAIAAAAQAAkAAAACAAYAAAARAAkAAAADAAYAAAABAAUAAAAAAAUAAAABAAYAAAAAAAYAAAASAAMAAAABAA4AAAASAAUAAAAAAAUAAAASAAYAAAAAAAYAAAACAAIAAAABAA4AAAACAAgAAAAAAAcAAAADAAgAAAABAAcAAAAFAAMAAAAAABIAAAAFAAQAAAAAABMAAAAFAAUAAAAAABQAAAAGAAMAAAABABIAAAAGAAQAAAABABMAAAAGAAUAAAABABQAAAAGAAgAAAACAAMAAAAHAAIAAAACABEAAAAHAAMAAAACABIAAAAHAAQAAAACABMAAAAHAAUAAAACABQAAAAHAAgAAAACAAcAAAAIAAIAAAADABEAAAAIAAMAAAADABIAAAAIAAQAAAADABMAAAAIAAUAAAADABQAAAAIAAgAAAADAAcAAAAJAAgAAAAAAAMAAAAKAAgAAAABAAMAAAALAAIAAAAAABUAAAALAAMAAAAAABYAAAALAAQAAAAAABcAAAALAAUAAAAAABgAAAALAAgAAAACAAMAAAAMAAIAAAABABUAAAAMAAMAAAABABYAAAAMAAQAAAABABcAAAAMAAUAAAABABgAAAANAAIAAAACABUAAAANAAMAAAACABYAAAANAAQAAAACABcAAAANAAUAAAACABgAAAANAAYAAAAAABoAAAANAAgAAAABAA8AAAAOAAIAAAADABUAAAAOAAMAAAADABYAAAAOAAQAAAADABcAAAAOAAUAAAADABgAAAAOAAYAAAABABoAAAAOAAcAAAAAAAIAAAAOAAgAAAACAAEAAAAPAAcAAAABAAIAAAAPAAgAAAADAAEAAAAQAAYAAAACAA8AAAAQAAcAAAACABAAAAAQAAgAAAACAAUAAAARAAYAAAADAA8AAAARAAcAAAADABAAAAARAAgAAAADAAUAAAACAAkAAAAAAAgAAAADAAkAAAABAAgAAAAEAAkAAAADAAMAAAAFAAkAAAADABAAAAAFAAgAAAADAA8AAAAGAAkAAAABAAsAAAAHAAkAAAACAAgAAAAFAAIAAAAAABEAAAAGAAIAAAABABEAAAAFAAYAAAAAABoAAAAGAAYAAAABABoAAAAQAAQAAAAAABoAAAARAAQAAAABABoAAAAJAAIAAAAAABoAAAAKAAIAAAABABoAAAACAAQAAAAAABoAAAADAAQAAAABABoAAAA=")
tile_set = SubResource("TileSet_x836q")

[node name="Lights" type="Node2D" parent="."]

[node name="PointLight2D" type="PointLight2D" parent="Lights"]
position = Vector2(114, 66)
scale = Vector2(1.6775, 1.6775)
shadow_enabled = true
texture = SubResource("GradientTexture2D_wyha3")

[node name="PointLight2D2" type="PointLight2D" parent="Lights"]
position = Vector2(208, 66)
scale = Vector2(1.6775, 1.6775)
shadow_enabled = true
texture = SubResource("GradientTexture2D_wyha3")

[node name="PointLight2D3" type="PointLight2D" parent="Lights"]
position = Vector2(208, 66)
scale = Vector2(1.6775, 1.6775)
energy = 0.14
shadow_enabled = true
texture = SubResource("GradientTexture2D_x836q")

[node name="PointLight2D4" type="PointLight2D" parent="Lights"]
position = Vector2(113, 66)
scale = Vector2(1.6775, 1.6775)
energy = 0.14
shadow_enabled = true
texture = SubResource("GradientTexture2D_x836q")

[node name="PointLight2D5" type="PointLight2D" parent="Lights"]
position = Vector2(55, 23)
scale = Vector2(0.501469, 0.501469)
energy = 0.8
shadow_enabled = true
texture = SubResource("GradientTexture2D_k5gl5")

[node name="PointLight2D6" type="PointLight2D" parent="Lights"]
position = Vector2(40, 38)
scale = Vector2(0.501469, 0.501469)
energy = 0.8
shadow_enabled = true
texture = SubResource("GradientTexture2D_k5gl5")

[node name="PointLight2D7" type="PointLight2D" parent="Lights"]
position = Vector2(250, 25)
scale = Vector2(0.501469, 0.501469)
energy = 0.8
shadow_enabled = true
texture = SubResource("GradientTexture2D_k5gl5")

[node name="PointLight2D8" type="PointLight2D" parent="Lights"]
position = Vector2(295, 56)
scale = Vector2(0.501469, 0.501469)
energy = 0.8
shadow_enabled = true
texture = SubResource("GradientTexture2D_k5gl5")

[node name="PointLight2D9" type="PointLight2D" parent="Lights"]
position = Vector2(314, 78)
scale = Vector2(0.501469, 0.95386)
energy = 0.8
shadow_enabled = true
texture = SubResource("GradientTexture2D_k5gl5")

[node name="PointLight2D10" type="PointLight2D" parent="Lights"]
position = Vector2(7, 78)
scale = Vector2(0.501469, 0.95386)
energy = 0.8
shadow_enabled = true
texture = SubResource("GradientTexture2D_k5gl5")

[node name="PointLight2D11" type="PointLight2D" parent="Lights"]
position = Vector2(160, 136.262)
scale = Vector2(0.501469, 0.19568)
energy = 1.66
shadow_enabled = true
texture = SubResource("GradientTexture2D_k5gl5")

[node name="PointLight2D12" type="PointLight2D" parent="Lights"]
position = Vector2(169, 147)
scale = Vector2(0.242555, 0.144715)
energy = 1.66
shadow_enabled = true
texture = SubResource("GradientTexture2D_k5gl5")

[node name="PointLight2D13" type="PointLight2D" parent="Lights"]
position = Vector2(200, 149)
scale = Vector2(0.242555, 0.144715)
energy = 1.66
shadow_enabled = true
texture = SubResource("GradientTexture2D_k5gl5")

[node name="PointLight2D14" type="PointLight2D" parent="Lights"]
position = Vector2(180, 149)
scale = Vector2(0.0624999, 0.144715)
energy = 1.66
shadow_enabled = true
texture = SubResource("GradientTexture2D_k5gl5")

[node name="PointLight2D15" type="PointLight2D" parent="Lights"]
position = Vector2(239.5, 130.685)
scale = Vector2(0.734375, 0.759857)
energy = 1.2
shadow_enabled = true
texture = SubResource("GradientTexture2D_etmr1")

[node name="PointLight2D16" type="PointLight2D" parent="Lights"]
position = Vector2(273, 136)
scale = Vector2(0.534578, 0.335462)
energy = 1.2
shadow_enabled = true
texture = SubResource("GradientTexture2D_etmr1")

[node name="PointLight2D17" type="PointLight2D" parent="Lights"]
position = Vector2(48, 138)
scale = Vector2(0.534578, 0.335462)
energy = 1.2
shadow_enabled = true
texture = SubResource("GradientTexture2D_etmr1")

[node name="Player" parent="." instance=ExtResource("2_c1ttj")]
position = Vector2(62, 148)
has_gun = false
ui_active = false

[node name="Birds" type="Node2D" parent="."]

[node name="Marker2D" type="Marker2D" parent="Birds"]
position = Vector2(40, 68)

[node name="Marker2D2" type="Marker2D" parent="Birds"]
position = Vector2(54, 68)

[node name="Marker2D3" type="Marker2D" parent="Birds"]
position = Vector2(86, 101)

[node name="Marker2D4" type="Marker2D" parent="Birds"]
position = Vector2(104, 101)

[node name="Marker2D5" type="Marker2D" parent="Birds"]
position = Vector2(150, 37)

[node name="Marker2D6" type="Marker2D" parent="Birds"]
position = Vector2(169, 37)

[node name="Marker2D7" type="Marker2D" parent="Birds"]
position = Vector2(262, 69)

[node name="Marker2D8" type="Marker2D" parent="Birds"]
position = Vector2(281, 69)

[node name="Marker2D9" type="Marker2D" parent="Birds"]
position = Vector2(216, 102)

[node name="Marker2D10" type="Marker2D" parent="Birds"]
position = Vector2(233, 102)

[node name="Walls" type="TileMapLayer" parent="." groups=["Wall"]]
tile_map_data = PackedByteArray("AAAAAAAAAAADAAAAAAAAAAEAAAADAAAAAAABAAAAAAABAAwAAAACAAAAAAACAAwAAAADAAAAAAAAAAAAAAAEAAAAAAAAAAAAAAAFAAAAAAAAAAAAAAAGAAAAAAAAAAAAAAAHAAAAAAAAAAAAAAAIAAAAAAAAAAAAAAAJAAAAAAAAAAAAAAAKAAAAAAAAAAAAAAALAAAAAAAAAAAAAAAMAAAAAAAAAAAAAAANAAAAAAAAAAAAAAAOAAAAAAAAAAAAAAAPAAAAAAAAAAAAAAAQAAAAAAAAAAAAAAARAAAAAAADAAwAAAASAAAAAAABAAwAAAATAAAAAAADAAAAAAAAAAoAAAADAAAAAAABAAoAAAADAA4AAAACAAoAAAAAAAAAAAADAAoAAAAAAAAAAAAEAAoAAAAAAAAAAAAFAAoAAAAAAAAAAAAGAAoAAAAAAAAAAAAHAAoAAAAAAAAAAAAIAAoAAAAAAAAAAAAJAAoAAAAAAAAAAAAKAAoAAAAAAAAAAAALAAoAAAAAAAAAAAAMAAoAAAAAAAAAAAANAAoAAAAAAAAAAAAOAAoAAAAAAAAAAAAPAAoAAAAAAAAAAAAQAAoAAAAAAAAAAAARAAoAAAAAAAAAAAASAAoAAAADAA0AAAATAAoAAAADAAAAAAAAAAsAAAABAAAAAAABAAsAAAABAAAAAAACAAsAAAABAAAAAAADAAsAAAABAAAAAAAEAAsAAAABAAAAAAAFAAsAAAABAAAAAAAGAAsAAAABAAAAAAAHAAsAAAABAAAAAAAIAAsAAAABAAAAAAAJAAsAAAABAAAAAAAKAAsAAAABAAAAAAALAAsAAAABAAAAAAAMAAsAAAABAAAAAAANAAsAAAABAAAAAAAOAAsAAAABAAAAAAAPAAsAAAABAAAAAAAQAAsAAAABAAAAAAARAAsAAAABAAAAAAASAAsAAAABAAAAAAATAAsAAAABAAAAAAAAAAIAAAADAAAAAAAAAAMAAAAAAA4AAAAAAAQAAAAAAA8AAAAAAAUAAAAAAA8AAAAAAAYAAAAAABAAAAAAAAcAAAADAAAAAAAAAAgAAAADAAAAAAAAAAkAAAADAAAAAAATAAEAAAADAAAAAAATAAIAAAADAAAAAAATAAMAAAAAAA4AAAATAAQAAAAAAA8AAAATAAUAAAAAAA8AAAATAAYAAAAAABAAAAATAAcAAAADAAAAAAATAAgAAAADAAAAAAATAAkAAAADAAAAAAABAAEAAAAAAA0AAAASAAEAAAABAA0AAAASAAkAAAACAA0AAAABAAkAAAACAA4AAAABAAIAAAADAAoAAAACAAEAAAADAAoAAAARAAEAAAADAAkAAAASAAIAAAADAAkAAAASAAcAAAABAAYAAAASAAgAAAACAA0AAAABAAcAAAABAAUAAAABAAgAAAACAA4AAAA=")
tile_set = SubResource("TileSet_x836q")

[node name="CanvasModulate" type="CanvasModulate" parent="."]
color = Color(0.497474, 0.497474, 0.497474, 1)
